PR/45217: Martin Matuska: Use proper lengths to space pad fields and don't overwrite them according to the spec.